# dflowmap

./: .gitignore  .gitmodules  CMakeLists.txt  ChpBackend.cc  ChpBackend.h  ChpCircuitGenerator.cc  ChpCircuitGenerator.h  ChpGenerator.cc  ChpGenerator.h  ChpLibGenerator.cc  ChpLibGenerator.h  ChpProcGenerator.cc  ChpProcGenerator.h  Constant.h  DflowGenerator.cc  DflowGenerator.h  Helper.cc  Helper.h  Makefile  Metrics.cc  Metrics.h  ProcGenerator.cc  ProcGenerator.h  README.md  arith.act  backup.sh  build.sh  collect.sh  common.h  compile.sh  config.h  config.in  configure  diff.sh  eeeeeEeeeEeee.act  error.act  expropt.conf  fluid.act  funcIf.act  funcLoop.act  (+11 more)
backend/chp/: ChpLibGenerator.cc  ChpLibGenerator.h
common/: Helper.cc  common.h  config.h
customFUs/: 0addc1_r0lt1_init0_0addc1_r2lt1_init0_0addc1_r4lt1_init0_0addc1_r6lt1_0addc1_2add0_32_32_32_1_1_1_1_32_32_32_1_32_1_32_1_32_1_32_32_.v  0addc1_r0lt1_init0_0addc1_r2lt1_init0_0addc1_r4lt1_init0_0addc1_r6lt1_0addc1_32_32_1_1_1_1_32_32_1_32_1_32_1_32_1_32_.v
dflow-std/: chp.metrics  dflow_stdlib.act  dflow_stdlib_refine.act  dflow_stdlib_refine_test.act  std.metrics
dflow_std/: dflow_qdi.metrics  dflow_stdlib.act  lib.act  libq.act
metrics/: add32.metric  add_metric  and_metric  buff_metric  copy_metric  div_metric  fluid.metrics  fluid_metrics.xlsx  icmp_metric  lshift_metric  merge_metric  mul_metric  rem_metric  sink_metric  source32.metric  source_metric  split_metric
src/: CMakeLists.txt  DflowMapPass.cc  DflowMapPass.h  main.cc
src/backend/: CMakeLists.txt
src/backend/chp/: CMakeLists.txt  ChpBackend.cc  ChpBackend.h  ChpCircuitGenerator.cc  ChpCircuitGenerator.h  ChpGenerator.cc  ChpGenerator.h  ChpLibGenerator.cc  ChpLibGenerator.h
src/backend/netlist/: CMakeLists.txt  NetlistBackend.cc  NetlistBackend.h  NetlistGenerator.cc  NetlistGenerator.h  NetlistLibGenerator.cc  NetlistLibGenerator.h
src/common/: CMakeLists.txt  Constant.h  Helper.cc  Helper.h  common.h  config.h
src/core/: CMakeLists.txt  DflowGenerator.cc  DflowGenerator.h  Metrics.cc  Metrics.h  NameGenerator.cc  NameGenerator.h  ProcGenerator.cc  ProcGenerator.h  dflowmap_main.cc
test/: CMakeLists.txt
test/basic/: CMakeLists.txt
test/basic/if/: CMakeLists.txt  if_test.cc
tests/: adpcm.act  bf.act  dataflowClusterCopy.act  dfadd.act  dfdiv.act  dfmul.act  gsm.act  if.act  init.act  loop.act  mem.act  mixer.act  sequential2.act  sha.act
tools/: CMakeLists.txt  MergeMetrics.cc  MergeMetrics.cpp  Parser.java  dflow_std_generator.c  dflow_std_generator.cc
